grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    import_prefix: _ => repeat1('.'),

    relative_import: $ => seq(
      $.import_prefix,
      optional($.dotted_name),
    ),

    _import_list: $ => seq(
      commaSep1(field('name', choice(
        $.dotted_name,
        $.aliased_import,
      ))),
      optional(','),
    ),

    aliased_import: $ => seq(
      field('name', $.dotted_name),
      'as',
      field('alias', $.identifier),
    ),

    wildcard_import: _ => '*',

    return_statement: $ => seq(
      'return',
      optional($._expressions),
    ),

    _expressions: $ => choice(
      $.expression,
      $.expression_list,
    ),

    pass_statement: _ => prec.left('pass'),
    with_statement: $ => seq(
      optional('async'),
      'with',
      $.with_clause,
      ':',
      field('body', $._suite),
    ),

    with_clause: $ => choice(
      seq(commaSep1($.with_item), optional(',')),
      seq('(', commaSep1($.with_item), optional(','), ')'),
    ),

    with_item: $ => prec.dynamic(1, seq(
      field('value', $.expression),
    )),

    function_definition: $ => seq(
      optional('async'),
      'def',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      ':',
      field('body', $._suite),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    dotted_name: $ => prec(1, sep1($.identifier, '.')),

    // Match cases

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    binary_operator: $ => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '^', PREC.xor],
        [prec.left, '<<', PREC.shift],
        [prec.left, '>>', PREC.shift],
      ];

      // @ts-ignore
      return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
        field('left', $.primary_expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $.primary_expression),
      ))));
    },

    unary_operator: $ => prec(PREC.unary, seq(
      field('operator', choice('+', '-', '~')),
      field('argument', $.primary_expression),
    )),

    _not_in: _ => seq('not', 'in'),

    _is_not: _ => seq('is', 'not'),

    comparison_operator: $ => prec.left(PREC.compare, seq(
      $.primary_expression,
      repeat1(seq(
        field('operators',
          choice(
            '<',
            '<=',
            '==',
            '!=',
            '>=',
            '>',
            '<>',
            'in',
            alias($._not_in, 'not in'),
            'is',
            alias($._is_not, 'is not'),
          )),
        $.primary_expression,
      )),
    )),

    assignment: $ => seq(
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type)),
        seq(':', field('type', $.type), '=', field('right', $._right_hand_side)),
      ),
    ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list,
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
      $.yield,
    ),

    attribute: $ => prec(PREC.call, seq(
      field('object', $.primary_expression),
      '.',
      field('attribute', $.identifier),
    )),

    string: $ => seq(
      $.string_start,
      repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    float: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(seq(
        choice(
          seq(digits, '.', optional(digits), optional(exponent)),
          seq(optional(digits), '.', digits, optional(exponent)),
          seq(digits, exponent),
        ),
        optional(/[jJ]/),
      ));
    },

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    cimport_statement: $ => seq(
      'cimport',
      $._import_list,
    ),

    cimport_from_statement: $ => seq(
      'from',
      field('module_name', choice(
        $.relative_import,
        $.dotted_name,
      )),
      'cimport',
      choice(
        $.wildcard_import,
        $._import_list,
        seq('(', $._import_list, ')'),
      ),
    ),

    // --- Phase 2: C type system and cdef variable declarations ---

    c_type: $ => {
      const keyword = value => alias(value, $.identifier);
      const complex_keyword = alias(token(prec(1, 'complex')), $.identifier);
      const integer_type = choice(
        keyword('char'),
        keyword('short'),
        seq(keyword('short'), keyword('int')),
        keyword('int'),
        keyword('long'),
        seq(keyword('long'), keyword('int')),
        seq(keyword('long'), keyword('long')),
        seq(keyword('long'), keyword('long'), keyword('int')),
      );
      const numeric_type = choice(
        integer_type,
        seq(keyword('float'), complex_keyword),
        seq(keyword('double'), complex_keyword),
        seq(keyword('long'), keyword('double'), complex_keyword),
        keyword('float'),
        keyword('double'),
        seq(keyword('long'), keyword('double')),
      );

      return prec.right(PREC.c_type, seq(
        optional('const'),
        choice(
          seq(choice(keyword('unsigned'), keyword('signed')), choice(integer_type, $.identifier)),
          numeric_type,
          keyword('void'),
          keyword('bint'),
          $.c_tuple_type,
          $.parenthesized_c_type,
          $.dotted_name,
          $.identifier,
        ),
        optional(field('suffix', choice(
          $.c_pointer_declarator,
          $.c_reference_declarator,
          $.c_memoryview_declarator,
          repeat1($.c_array_declarator),
        ))),
      ));
    },

    c_pointer_declarator: _ => prec(PREC.c_type, repeat1('*')),

    c_memoryview_declarator: $ => seq(
      '[',
      commaSep1($._memoryview_slice),
      ']',
    ),

    _memoryview_slice: $ => choice(
      ':',
      seq(':', ':', $.expression),
    ),

    c_declarator: $ => choice(
      seq(
        field('function_pointer', $.c_function_pointer_declarator),
        optional(seq('=', field('value', $.expression))),
      ),
      $._c_simple_declarator,
    ),

    _c_simple_declarator: $ => seq(
      optional(field('prefix', $.c_pointer_declarator)),
      field('name', $.identifier),
      optional(field('suffix', repeat1($.c_array_declarator))),
      optional(seq('=', field('value', $.expression))),
    ),

    cdef_statement: $ => prec(PREC.cdef, seq(
      'cdef',
      optional(choice('readonly', 'public')),
      field('type', $.c_type),
      commaSep1(field('declarator', $.c_declarator)),
    )),

    c_variable_declaration: $ => prec(PREC.c_type, seq(
      field('type', $.c_type),
      commaSep1(field('declarator', $.c_declarator)),
    )),

    cdef_function_definition: $ => prec(PREC.cdef + 1, seq(
      choice('cdef', 'cpdef'),
      optional('inline'),
      optional('api'),
      optional(field('return_type', $.c_type)),
      field('name', $.identifier),
      field('parameters', $.c_parameters),
      optional($._c_function_modifiers),
      ':',
      field('body', $._suite),
    )),

    c_parameters: $ => seq(
      '(',
      optional($._c_parameters_list),
      ')',
    ),

    c_declaration_parameters: $ => seq(
      '(',
      optional($._c_declaration_parameters_list),
      ')',
    ),

    _c_parameters_list: $ => seq(
      commaSep1(choice($.c_parameter, $.c_variadic_parameter)),
      optional(','),
    ),

    _c_declaration_parameters_list: $ => seq(
      commaSep1(choice($.c_declaration_parameter, $.c_variadic_parameter)),
      optional(','),
    ),

    c_parameter: $ => choice(
      seq(
        field('type', $.c_type),
        field('name', $.identifier),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_function_pointer_type),
        optional(seq('=', field('default', $.expression))),
      ),
      $.parameter,
    ),

    c_declaration_parameter: $ => choice(
      seq(
        field('type', $.c_function_pointer_type),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_type),
        field('name', $.identifier),
        optional(seq('=', field('default', $.expression))),
      ),
      seq(
        field('type', $.c_type),
        optional(seq('=', field('default', $.expression))),
      ),
      $.parameter,
    ),

    cdef_except_clause: $ => seq(
      'except',
      choice(
        '+',
        '?',
        seq(optional('?'), $.expression),
        '*',
      ),
    ),

    _c_function_modifiers: $ => choice(
      seq(
        field('noexcept', $.c_noexcept_clause),
        optional(field('nogil', alias('nogil', $.identifier))),
        optional(field('except_clause', $.cdef_except_clause)),
      ),
      seq(
        field('nogil', alias('nogil', $.identifier)),
        optional(field('except_clause', $.cdef_except_clause)),
      ),
      field('except_clause', $.cdef_except_clause),
    ),

    // bare function declarations inside extern blocks: `T sin[T](T x)`
    c_function_declaration: $ => prec(PREC.cdef, seq(
      field('return_type', $.c_type),
      field('name', $.identifier),
      optional(field('type_parameters', $.c_template_parameters)),
      field('parameters', $.c_declaration_parameters),
      optional($._c_function_modifiers),
    )),

    // Custom suite for cdef extern blocks and ctypedef struct/union/enum bodies
    // where bare C declarations (c_function_declaration, c_variable_declaration) are valid
    _cython_extern_suite: $ => choice(
      seq($._indent, alias($._cython_extern_block, $.block)),
      alias($._newline, $.block),
    ),

    cdef_class_definition: $ => seq(
      'cdef',
      'class',
      field('name', $.identifier),
      field('superclasses', optional($.argument_list)),
      ':',
      field('body', $._suite),
    ),

    ctypedef_statement: $ => prec(PREC.cdef, seq(
      'ctypedef',
      choice(
        field('type', $.c_function_pointer_type),
        seq(
          field('type', $.c_type),
          field('name', $.identifier),
        ),
      ),
    )),

    ctypedef_struct_definition: $ => prec(PREC.cdef + 1, seq(
      'ctypedef',
      $._ctypedef_struct_head,
      optional(field('cname', $.string)),
      ':',
      field('body', $._cython_extern_suite),
    )),

    _ctypedef_struct_head: $ => seq(
      field('kind', choice(
        alias('struct', $.identifier),
        alias('union', $.identifier),
        alias('enum', $.identifier),
      )),
      field('name', $.identifier),
    ),

    ctypedef_fused_definition: $ => seq(
      'ctypedef',
      'fused',
      field('name', $.identifier),
      ':',
      field('body', $._suite),
    ),

    // --- Phase 6: cdef extern blocks ---
    // e.g. cdef extern from "<vector>" namespace "std" nogil:
    cdef_extern_block: $ => prec(PREC.cdef + 1, seq(
      'cdef',
      'extern',
      optional(seq(
        'from',
        field('source', choice($.string, '*')),
      )),
      optional(seq(
        'namespace',
        field('namespace', $.string),
      )),
      optional('nogil'),
      ':',
      field('body', $._cython_extern_suite),
    )),

    // --- Phase 7: compile-time directives, include, property ---

    cython_def_statement: $ => seq(
      'DEF',
      field('name', $.identifier),
      '=',
      field('value', $.expression),
    ),

    cython_if_statement: $ => prec.right(seq(
      'IF',
      field('condition', $.expression),
      ':',
      field('consequence', $._suite),
      repeat(field('alternative', $.cython_elif_clause)),
      optional(field('alternative', $.cython_else_clause)),
    )),

    cython_elif_clause: $ => seq(
      'ELIF',
      field('condition', $.expression),
      ':',
      field('consequence', $._suite),
    ),

    cython_else_clause: $ => seq(
      'ELSE',
      ':',
      field('body', $._suite),
    ),

    cython_include_statement: $ => seq(
      'include',
      field('path', $.string),
    ),

    cython_property_definition: $ => seq(
      'property',
      field('name', $.identifier),
      ':',
      field('body', $._suite),
    ),
  },
});

module.exports.PREC = PREC;

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return sep1(rule, ',');
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
